...
                    VStack {
                        MyRecipeImageDetailView(recipe: recipe)
                    }
                }
            }
            .listStyle(.plain)
            .navigationBarTitle("My Recipes", displayMode: .inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        myRecipesViewModel.addingRecipe.toggle()
                    }, label: {
                      Text("Add")
                      Image(systemName: "plus.circle")
                        .imageScale(.medium)
                        .bold()
                    })
                    .fullScreenCover(
                      isPresented: $myRecipesViewModel.addingRecipe,
...
