...
            // Allows you to swipe through the tabs,
            // if you only have one onboarding screen, the dots at the bottom of the screen that indicate what tab you are on, won't be displayed
            .tabViewStyle(.page)
            // Displays the background behind the tab indicator dots so that they can been seen in light and dark mode
            .indexViewStyle(.page(backgroundDisplayMode: .always))

            Button(selectedView == maxNumberOfScreens ? "Done" : "Next") {
                if selectedView == maxNumberOfScreens {
                    // Save the completedOnboarding state and exit the view
                    hasSeenOnboardingView = true
                } else {
                    selectedView += 1
                }
...
