...
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(action: {
                        myRecipesViewModel.addingRecipe = false
                        dismiss()
                    }, label: {
                        Text("Cancel")
                    })
                }
                ToolbarItem(placement: .principal) {
                    Text("Adding New Recipe")
                        .font(.headline)
                }
...
